--- a/app/views/layouts/parts/_login-form.html.erb
+++ b/app/views/layouts/parts/_login-form.html.erb
@@ -25,7 +25,7 @@
         </div>
         <%= f.submit "Login", class: 'btn btn-block btn-daydash btn-daydash-green-1' %>
         <div class="forgot-password">
-          <a href="#">Forgot Password?</a>
+          <%= link_to "Forgot Password?", new_password_path(resource_name) %>
         </div>
       </div>
       <div class="modal-footer">
