--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,51 @@
-<p>Hello <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<!-- Body -->
+<tr class="section">
+  <td valign="top" id="templateBody">
+    <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnTextBlock" style="min-width:100%;">
+      <tbody class="mcnTextBlockOuter">
+        <tr>
+          <td valign="top" class="mcnTextBlockInner" style="padding-top:9px;">
+            <!--[if mso]>
+            <table align="left" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;">
+            <tr>
+            <![endif]-->
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+            <!--[if mso]>
+            <td valign="top" width="600" style="width:600px;">
+            <![endif]-->
+            <table align="left" border="0" cellpadding="0" cellspacing="0" style="max-width:100%; min-width:100%;" width="100%" class="mcnTextContentContainer">
+              <tbody>
+                <tr>
+                  <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
+                    <h1 style="background: black; color: white; padding: 5px; margin-bottom: 3px; display: inline-block;">Welcome, <%= "#{@user.first_name}" %>!</h1>
+                    <h1 style="padding: 0px 5px;">You’ve made a <span style="display: inline-block; background: #DFFFFB; padding: 5px;">great choice!</span></h1>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+                    <p style="font-weight: 200; margin-top: 30px;">Hello <%= @resource.email %>!</p>
+
+                    <p style="font-weight: 200; margin-top: 30px;">Someone has requested a link to change your password. You can do this through the link below.</p>
+
+                    <p style="font-weight: 200; margin-top: 30px;"><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+
+                    <p style="font-weight: 200; margin-top: 30px;">If you didn't request this, please ignore this email.</p>
+                    <p style="font-weight: 200; margin-top: 30px;">Your password won't change until you access the link above and create a new one.</p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <!--[if mso]>
+            </td>
+            <![endif]-->
+
+            <!--[if mso]>
+            </tr>
+            </table>
+            <![endif]-->
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </td>
+</tr>
+
+
