--- a/config/upstart/sidekiq.conf.erb
+++ b/config/upstart/sidekiq.conf.erb
@@ -10,4 +10,4 @@ stop on runlevel [06]
 respawn
 respawn limit 3 30
 
-exec su - <%= user %> -c 'cd <%= current_path %> && exec bundle exec sidekiq -i 0 -e <%= rails_env %> -C <%= current_path %>/config/sidekiq.yml'
+exec su - deploy -c 'cd <%= current_path %> && exec bundle exec sidekiq -i 0 -e <%= rails_env %> -C <%= current_path %>/config/sidekiq.yml'
