--- a/app/views/client/profile/tickets.html.erb
+++ b/app/views/client/profile/tickets.html.erb
@@ -56,7 +56,7 @@
                   </div>
                   <div class="col-xs-12 col-md-3">
                     <a class="cover" style="background-image: url(<%= ticket.event.event_pictures.first.try(:media, :thumb) %>);" href="<%= client_event_path(ticket.event.id) %>">
-                      <img src="<%= ticket.qr_code(:thumb) %>" width="100%" />
+                      <img src="<%= ticket.qr_code(:medium) %>" width="100%" />
                     </a>
                   </div>
                 </div>
