--- a/app/views/client/profile/settings.html.erb
+++ b/app/views/client/profile/settings.html.erb
@@ -28,7 +28,26 @@
             </div>
             <div class="form-group col-xs-12 col-md-6">
               <label>Date of Birth</label>
-              <%= f.text_field :birthday, value: @user.birthday, class: 'form-control' %>
+              <div class="form-inline">
+                <select class="form-control" name="dob_date" required >
+                  <option value="">Date</option>
+                  <% (1..31).each do |date| %>
+                    <option <%= "selected" if current_user.birthday.try(:day) == date %> value="<%= date %>"><%= date %></option>
+                  <% end %>
+                </select>
+                <select class="form-control" name="dob_month" required >
+                  <option value="">Month</option>
+                  <% (1..12).each do |month| %>
+                    <option <%= "selected" if current_user.birthday.try(:month) == month %> value="<%= month %>"><%= Date::MONTHNAMES[month] %></option>
+                  <% end %>
+                </select>
+                <select class="form-control" name="dob_year" required >
+                  <option value="">Year</option>
+                  <% (0..99).each do |year| %>
+                    <option <%= "selected" if current_user.birthday.try(:year) == (Time.zone.now.year - year) %> value="<%= (Time.zone.now.year - year) %>"><%= (Time.zone.now.year - year) %></option>
+                  <% end %>
+                </select>
+              </div>
             </div>
             <div class="form-group col-xs-12 col-md-6">
               <label>Gender</label>
