--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -76,7 +76,7 @@
         </nav>
       </div>
       <div id="main">
-        <div class="container">
+        <!-- <div class="container">
           <div class="row">
             <div class="col-xs-12">
               <% flash.each do |key, value| %>
@@ -84,7 +84,7 @@
               <% end %>
             </div>
           </div>
-        </div>
+        </div> -->
         <%= yield %>
       </div>
       <div id="footer">
