--- a/app/views/client/profile/settings.html.erb
+++ b/app/views/client/profile/settings.html.erb
@@ -8,7 +8,15 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-9">
-        <a href="/auth/facebook">Connect Facebook</a>
+        <div class="form-header">
+          <h1 class="form-title">Connect with Facebook</h1>
+        </div>
+
+        <div class="form-body row">
+          <div class="form-group col-xs-12 col-md-6">
+            <a href="/auth/facebook"><img src="/src/images/theme/fb-login.png" height="40"></a>
+          </div>
+        </div>
       </div>
     </div>
     <div class="row">
