### merge account Facebook
Why:

* ...

--- a/app/views/client/profile/settings.html.erb
+++ b/app/views/client/profile/settings.html.erb
@@ -6,7 +6,7 @@
 
 <div class="section">
   <div class="container">
-    <div class="row">
+<!--     <div class="row">
       <div class="col-xs-12 col-md-9">
         <div class="form-header">
           <h1 class="form-title">Connect with Facebook</h1>
@@ -18,7 +18,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="row">
       <div class="col-xs-12 col-md-9">
         <%= form_for(@user, as: @user, url: client_profile_settings_path(@user), html: { method: :put }) do |f| %>
