--- a/app/assets/stylesheets/client/events.sass
+++ b/app/assets/stylesheets/client/events.sass
@@ -271,6 +271,10 @@ label
   background-image: asset-url('icons/icon-edit.png')
 .icon-unpublish
   background-image: asset-url('icons/icon-unpublish.png')
+.icon-waiting
+  background-image: asset-url('icons/icon-waiting.png')
+.icon-checked
+  background-image: asset-url('icons/icon-checked.png')
 
 
 .btn-daydash
