--- a/app/views/client/events/checkout.html.erb
+++ b/app/views/client/events/checkout.html.erb
@@ -10,7 +10,7 @@
             <div class="back-btn">
               <a href="<%= client_event_path(@event) %>"><i class="icon icon-arrow-left"></i> <%= @event.title %></a>
             </div>
-            <h1 class="panel-title event-name">คุณได้ทำการซั้งซื้อ: <%= @event.title %></h1>
+            <h1 class="panel-title event-name">คุณได้ทำการสั่งซื้อ: <%= @event.title %></h1>
 
             <ul class="meta list-inline">
               <li><i class="icon icon-xs icon-calendar"></i> <%= @event.to_uptime %></li>
