--- a/app/views/layouts/parts/_google_maps.html.erb
+++ b/app/views/layouts/parts/_google_maps.html.erb
@@ -1,4 +1,3 @@
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYyAbr0KMSO5pXyEqNYp9_c6KdbYb9P5A&libraries=places&callback=initAutocomplete" async defer></script>
 
 <script type="text/javascript">
   // var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
@@ -134,6 +133,8 @@
     $("#event_latitude").val(lat);
     $("#event_longitude").val(lng);
   }
+
+  initAutocomplete()
 </script>
 
 <style>
