--- a/app/views/organizer/events/checkin.html.erb
+++ b/app/views/organizer/events/checkin.html.erb
@@ -53,7 +53,11 @@
                   <td><%= ticket.user.email %></td>
                   <td><%= ticket.user.phone %></td>
                   <td><%= ticket.code %></td>
-                  <td>CHECK IN</td>
+                  <% if ticket.status.used? %>
+                    <td>Checked</td>
+                  <% else %>
+                    <td><%= link_to "CHECK IN", organizer_event_ticket_checking_path(@event.id, ticket.id), method: :post %></td>
+                  <% end %>
                 </tr>
                 <% end %>
               </tbody>
@@ -66,7 +70,6 @@
   </div>
 </div>
 <script>
-
   function init_table_filter() {
     $('.table-filter').keyup(function () {
       var element = this;
@@ -76,7 +79,7 @@
       $('tbody tr', table).filter(function () {
           return rex.test($(this).text());
       }).show();
-    })    
+    })
   }
 
   $(function() {
