--- a/app/views/organizer/parts/_organizer-event-nav.html.erb
+++ b/app/views/organizer/parts/_organizer-event-nav.html.erb
@@ -9,6 +9,10 @@
     <a href="<%= edit_organizer_event_path(@event) %>"><i class="icon icon-xs icon-edit"></i> Edit</a>
   </li>
   <li>
-    <a href="<%= unpublish_organizer_event_path(@event) %>"><i class="icon icon-xs icon-unpublish"></i> Unpublish</a>
+    <% if @event.status.published? %>
+      <a href="<%= unpublish_organizer_event_path(@event) %>"><i class="icon icon-xs icon-unpublish"></i> Unpublish</a>
+    <% else %>
+      <a href="<%= published_organizer_event_path(@event) %>"><i class="icon icon-xs icon-checked"></i> Published</a>
+    <% end %>
   </li>
 </ul>
