--- a/app/views/organizer/events/new.html.erb
+++ b/app/views/organizer/events/new.html.erb
@@ -1,6 +1,10 @@
-<script>$('body').attr('id', 'organizer-events-new');</script>
+<script type="text/javascript">
+  $('body').attr('id', 'organizer-events-new');
+  $('#organizer-nav #menu-create-event').addClass('active');
+</script>
+
 <%= render partial: "organizer/parts/organizer-nav" %>
-<script>$('#organizer-nav #menu-create-event').addClass('active');</script>
+
 
 <div class="section">
   <div class="container">
