--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -292,10 +292,19 @@ function init_form_validate() {
         return false;
       }
       else {
+        transfer_submit(form);
         return true;
       }
     }
   });
+}
+
+function transfer_submit(form) {
+  try {
+    form.get(0).submit();
+  } catch(e) {
+    $('.btn-submit').button('reset');
+  }
 }
 
 function omise_submit(form) {
