--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -40,7 +40,7 @@
                     <% if is_index_with_categories? %>
                       <%= link_to category.title, 'javascript:;', class: 'category-filter', 'data-filter': category.id %>
                     <% else %>
-                      <a href="/categories/<%= category.slug %>"><%= category.title %></a>
+                      <a href="/categories/<%= category.slug %>" target="_self"><%= category.title %></a>
                     <% end %>
                   </li>
                 <% end unless @global_categories.nil? %>
@@ -164,6 +164,14 @@
     </div>
   </body>
 
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7&appId=259929777688738";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
   <!-- Template -->
   <%= render partial: "layouts/parts/section" %>
 </html>
