--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -17,7 +17,7 @@
             <div class="row">
               <div class="col-xs-12">
                 <h4 class="title text-left">
-                  <%= link_to @event.title, client_event_path(@event.to_url) %>
+                  <%= link_to @event.title, client_event_path(@event.to_url), target: '_self' %>
                 </h4>
                 <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= @event.to_uptime %></div>
                 <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= @event.location_name %></div>
