--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -72,7 +72,7 @@
             <% end %>
             <div class="info">
               <h4 class="title text-left">
-                <%= link_to event.title, client_event_path(event.to_url) %>
+                <%= link_to event.title, client_event_path(event.to_url), target: '_self' %>
               </h4>
               <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= event.first_section.to_event_human %></div>
               <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= event.location_name %></div>
